<resources>
    <string name="app_name">App Hospital</string>
    <string name="txt_username">Usuario</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_login" >Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="txt_no_internet">No hay conexión</string>
    <string name="txt_required_username">Nombre de usuario requerido</string>
    <string name="txt_required_password">Contraseña requerida</string>
    <string name="txt_invalid_user_or_password">Verifique su nombre de usuario y contraseña</string>
    <string name="txt_connection_error">No se puede conectar con el servidor, verifique su conexión a internet</string>
    <string name="txt_data_error">No se pudo almacenar en el dispositivo</string>
    <string name="drawer_item_logout">Cerrar sesión</string>
    <string name="txt_content_unavailable">Contenido no disponible</string>
    <string name="txt_no_appointments">No existen citas</string>
    <string name="txt_create">Reservar</string>
    <string name="txt_officing_number">Numero oficio</string>
    <string name="txt_reason_review">Motivo</string>
    <string name="txt_reasons">Motivos</string>
    <string name="txt_dependency_manager">Encargado</string>
    <string name="txt_date_stock_taking">Fecha</string>
    <string name="txt_crear_cita">Reservar consulta</string>
    <string name="txt_cita_no_pacientes">Numero de pacientes en espera: 0</string>
    <string name="txt_cita_tiempo_espera">Aviso. El tiempo promedio de duración de las consultas es de 45 minutos.
    </string>
    <string name="txt_appointment_creado">Se ha reservado la consulta</string>
</resources>
