<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/view_progress"
        layout="@layout/nested_view_progress"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_vertical_center"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <LinearLayout
            android:id="@+id/viewLoadingCreateStock"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_vertical_center">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:indeterminateTint="@color/accent" />

            <TextView
                android:id="@+id/txt_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextLight" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linerlayout_create_stock"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="53dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttonCreateStock">

            <TextView
                android:id="@+id/labelOfficingNumber"
                style="@style/rowTitle"
                android:layout_marginLeft="@dimen/regular_margin"
                android:layout_marginTop="@dimen/regular_margin"
                android:layout_marginRight="@dimen/regular_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_officing_number" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldOfficingNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/regular_margin"
                android:layout_marginTop="@dimen/regular_margin"
                android:layout_marginRight="@dimen/regular_margin"
                android:theme="@style/FloatingLabelDarkTextAppearance"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelOfficingNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number|text"
                    android:nextFocusDown="@+id/textFieldOfficingNumber"
                    android:textColor="@color/primaryTextDark"
                    android:textColorHint="@color/secondaryTextDark"
                    android:theme="@style/EditTextDarkAppearance" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/labelReason"
                style="@style/rowTitle"
                android:layout_marginLeft="@dimen/regular_margin"
                android:layout_marginTop="@dimen/regular_margin"
                android:layout_marginRight="@dimen/regular_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_reason_review"
                app:layout_constraintTop_toBottomOf="@+id/textFieldOfficingNumber"/>

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinnerReasons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/regular_margin"
                android:layout_marginTop="@dimen/regular_margin"
                android:layout_marginRight="@dimen/regular_margin"
                android:hint="@string/txt_reasons"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelReason"
                app:ms_arrow_tint="@color/colorPrimaryEmployees"
                app:ms_text_color="@color/primaryTextDark"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

            <TextView
                android:id="@+id/labelDependencyManager"
                style="@style/rowTitle"
                android:layout_marginLeft="@dimen/regular_margin"
                android:layout_marginTop="@dimen/regular_margin"
                android:layout_marginRight="@dimen/regular_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_dependency_manager"
                app:layout_constraintTop_toBottomOf="@+id/spinnerReasons"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldDependencyManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/regular_margin"
                android:layout_marginTop="@dimen/regular_margin"
                android:layout_marginRight="@dimen/regular_margin"
                android:theme="@style/FloatingLabelDarkTextAppearance"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelDependencyManager">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@+id/textFieldDependencyManager"
                    android:textColor="@color/primaryTextDark"
                    android:textColorHint="@color/secondaryTextDark"
                    android:theme="@style/EditTextDarkAppearance" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/labelDate"
                style="@style/rowTitle"
                android:layout_marginLeft="@dimen/regular_margin"
                android:layout_marginTop="@dimen/regular_margin"
                android:layout_marginRight="@dimen/regular_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_date_stock_taking"
                app:layout_constraintTop_toBottomOf="@+id/textFieldDependencyManager"/>

        </LinearLayout>

        <Button
            android:id="@+id/buttonCreateStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/regular_margin"
            android:layout_marginTop="@dimen/double_margin"
            android:layout_marginRight="@dimen/regular_margin"
            android:layout_marginBottom="@dimen/quad_margin"
            android:minWidth="240dp"
            android:text="@string/txt_create"
            android:textColor="@color/primaryTextLight"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linerlayout_create_stock"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>